--- a/resume.html
+++ b/resume.html
@@ -6,10 +6,11 @@
 	</head>
 	<body>
 	<div id="header"> 
-	<h3> MANYA GUPTA
+	<h3 style="font-family:Verdana"> MANYA GUPTA
 	</div>
 	<div class="left">
-	<p> Born in Lucknow.Age 19.Currently pursuing Btech IT at Manipal Institute Of Technology,Manipal.Graphic designer,web and app developer,coder and passionate for technology.</div>
+	<p>  <strong>ABOUT:</strong> Born in Lucknow.Age 19.Currently pursuing Btech IT at Manipal Institute Of Technology,Manipal.Graphic designer,web and app developer,coder and passionate for technology.</div>
+		<div class="pic"> <img src="https://qph.ec.quoracdn.net/main-thumb-19824048-200-mwhxkbovhqpfndistceswaucoekxufgr.jpeg" border="20px" size="150%" /> </div>
 	<div class="right"> 
 	<h4> SKILLS </h4>
 	<ul>
